Fixed minor issues of responsiveness card alignments

--- a/src/components/DarkBG/CustomWidth.css
+++ b/src/components/DarkBG/CustomWidth.css
@@ -117,7 +117,7 @@
 
 @media (min-width: 769px) and (max-width: 968px) {
   .last-card {
-    width: 49.5rem;
+    width: 48rem;
   }
 }
 @media (min-width: 320px) and (max-width: 380px){
